--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,145 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Activities.MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#f4f6f8">
-        <include  layout="@layout/toolbar_main"/>
+        android:layout_height="match_parent">
 
-        <androidx.core.widget.NestedScrollView
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp">
+            android:layout_height="match_parent"
+            android:background="#f4f6f8">
 
-            <LinearLayout
+            <include layout="@layout/toolbar_main" />
+
+
+            <in.srain.cube.views.ptr.PtrClassicFrameLayout
+                android:id="@+id/store_house_ptr_frame"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:ptr_duration_to_close="300"
+                app:ptr_duration_to_close_header="2000"
+                app:ptr_keep_header_when_refresh="true"
+                app:ptr_pull_to_fresh="false"
+                app:ptr_ratio_of_header_height_to_refresh="1.2"
+                app:ptr_resistance="1.7">
 
-                <soup.neumorphism.NeumorphCardView
-                    android:id="@+id/pressed_card"
-                    style="@style/Widget.Neumorph.CardView"
+                <androidx.core.widget.NestedScrollView
+                    android:id="@+id/nsv"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:neumorph_shapeType="pressed">
+                    android:layout_height="match_parent">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp">
+                        android:layout_height="0dp"
+                        android:orientation="vertical">
 
-
-                        <TextView
-                            android:id="@+id/key_tv"
-                            android:layout_width="wrap_content"
+                        <soup.neumorphism.NeumorphCardView
+                            android:id="@+id/pressed_card"
+                            style="@style/Widget.Neumorph.CardView"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/gangwon"
-                            android:gravity="center"
-                            android:maxLines="1"
-                            android:text="키워드"
-                            android:textColor="@color/black"
-                            android:textSize="35dp"
-                            android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:neumorph_shapeType="pressed">
 
-                        <ImageView
-                            android:id="@+id/imageView"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:layout_marginStart="5dp"
-                            android:src="@drawable/black_keyword"
-                            app:layout_constraintBottom_toBottomOf="@id/key_tv"
-                            app:layout_constraintStart_toEndOf="@id/key_tv"
-                            app:layout_constraintTop_toTopOf="@id/key_tv" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </soup.neumorphism.NeumorphCardView>
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:padding="10dp">
 
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/keyword_rv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/pressed_card" />
+                                <TextView
+                                    android:id="@+id/key_tv"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/gangwon"
+                                    android:gravity="center"
+                                    android:maxLines="1"
+                                    android:text="키워드"
+                                    android:textColor="@color/black"
+                                    android:textSize="35dp"
+                                    android:textStyle="bold"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
 
-                <soup.neumorphism.NeumorphCardView
-                    android:id="@+id/pressed_card2"
-                    style="@style/Widget.Neumorph.CardView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/keyword_rv"
-                    app:neumorph_shapeType="pressed">
+                                <ImageView
+                                    android:id="@+id/imageView"
+                                    android:layout_width="35dp"
+                                    android:layout_height="35dp"
+                                    android:layout_marginStart="5dp"
+                                    android:src="@drawable/black_keyword"
+                                    app:layout_constraintBottom_toBottomOf="@id/key_tv"
+                                    app:layout_constraintStart_toEndOf="@id/key_tv"
+                                    app:layout_constraintTop_toTopOf="@id/key_tv" />
+                            </androidx.constraintlayout.widget.ConstraintLayout>
+                        </soup.neumorphism.NeumorphCardView>
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp">
 
-                        <TextView
-                            android:id="@+id/news_tv"
-                            android:layout_width="wrap_content"
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/keyword_rv"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/gangwon"
-                            android:maxLines="1"
-                            android:text="뉴스"
-                            android:textColor="@color/black"
-                            android:textSize="35dp"
-                            android:textStyle="bold"
+                            android:layout_marginTop="10dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toBottomOf="@+id/pressed_card" />
 
-                        <ImageView
-                            android:id="@+id/imageView2"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:layout_marginStart="5dp"
-                            android:src="@drawable/news"
-                            app:layout_constraintBottom_toBottomOf="@id/news_tv"
-                            app:layout_constraintStart_toEndOf="@id/news_tv"
-                            app:layout_constraintTop_toTopOf="@id/news_tv" />
+                        <soup.neumorphism.NeumorphCardView
+                            android:id="@+id/pressed_card2"
+                            style="@style/Widget.Neumorph.CardView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/keyword_rv"
+                            app:neumorph_shapeType="pressed">
 
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </soup.neumorphism.NeumorphCardView>
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:padding="10dp">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/news_rv"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/pressed_card2">
+                                <TextView
+                                    android:id="@+id/news_tv"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/gangwon"
+                                    android:maxLines="1"
+                                    android:text="뉴스"
+                                    android:textColor="@color/black"
+                                    android:textSize="35dp"
+                                    android:textStyle="bold"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
 
-                </androidx.recyclerview.widget.RecyclerView>
+                                <ImageView
+                                    android:id="@+id/imageView2"
+                                    android:layout_width="35dp"
+                                    android:layout_height="35dp"
+                                    android:layout_marginStart="5dp"
+                                    android:src="@drawable/news"
+                                    app:layout_constraintBottom_toBottomOf="@id/news_tv"
+                                    app:layout_constraintStart_toEndOf="@id/news_tv"
+                                    app:layout_constraintTop_toTopOf="@id/news_tv" />
 
-            </LinearLayout>
+                            </androidx.constraintlayout.widget.ConstraintLayout>
+                        </soup.neumorphism.NeumorphCardView>
 
-        </androidx.core.widget.NestedScrollView>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/news_rv"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="10dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/pressed_card2"></androidx.recyclerview.widget.RecyclerView>
+                    </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.core.widget.NestedScrollView>
+
+            </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="30dp"
+            android:backgroundTint="@color/blue"
+            app:srcCompat="@drawable/upward_arrow" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation"
@@ -148,4 +173,97 @@
         android:layout_gravity="start|left"
         app:menu="@menu/menu_main" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:clickable="false"
+        android:id="@+id/powerMenu"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="30dp"
+        android:background="@drawable/news_background"
+        android:elevation="5dp"
+        android:visibility="gone"
+        tools:visibility="true">
+
+        <TextView
+            android:id="@+id/power_title"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="40dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="기사 제목"
+            android:textColor="@color/black"
+            android:textSize="24dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/power_press"
+            app:layout_constraintTop_toBottomOf="@id/power_title"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="40dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="언론사"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:textStyle="" />
+
+        <ImageView
+            app:layout_constraintTop_toBottomOf="@id/power_press"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="20dp"
+            android:id="@+id/power_image"
+            android:layout_width="0dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="13dp"
+            android:src="@drawable/black_keyword"
+            app:civ_border_color="@color/white"
+            app:civ_border_width="2dp" />
+
+        <TextView
+            app:layout_constraintTop_toBottomOf="@id/power_image"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/close"
+            android:layout_margin="40dp"
+            android:lineSpacingExtra="2dp"
+            android:id="@+id/power_sum"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:gravity="start"
+            android:text="본문 내용"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/close"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/btn_blue"
+            android:text="닫기"
+            android:textColor="@color/white"
+            android:textSize="17dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/readMore" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/readMore"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/btn_blue"
+            android:text="본문 읽기"
+            android:textColor="@color/white"
+            android:textSize="17dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/close"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
