--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,7 +18,6 @@
             android:background="#f4f6f8">
 
             <include layout="@layout/toolbar_main" />
-
 
             <in.srain.cube.views.ptr.PtrClassicFrameLayout
                 android:id="@+id/store_house_ptr_frame"
@@ -89,71 +89,147 @@
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/keyword_rv"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="100dp"
                             android:layout_marginTop="10dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/pressed_card" />
 
-                        <soup.neumorphism.NeumorphCardView
-                            android:id="@+id/pressed_card2"
-                            style="@style/Widget.Neumorph.CardView"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp"
+                        <com.pnikosis.materialishprogress.ProgressWheel
+                            android:visibility ="gone"
+                            android:id="@+id/progress_wheel"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            app:layout_constraintTop_toBottomOf="@id/keyword_rv"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/keyword_rv"
-                            app:neumorph_shapeType="pressed">
-
-                            <androidx.constraintlayout.widget.ConstraintLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:padding="10dp">
-
-                                <TextView
-                                    android:id="@+id/news_tv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/gangwon"
-                                    android:maxLines="1"
-                                    android:text="뉴스"
-                                    android:textColor="@color/black"
-                                    android:textSize="35dp"
-                                    android:textStyle="bold"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <ImageView
-                                    android:id="@+id/imageView2"
-                                    android:layout_width="35dp"
-                                    android:layout_height="35dp"
-                                    android:layout_marginStart="5dp"
-                                    android:src="@drawable/news"
-                                    app:layout_constraintBottom_toBottomOf="@id/news_tv"
-                                    app:layout_constraintStart_toEndOf="@id/news_tv"
-                                    app:layout_constraintTop_toTopOf="@id/news_tv" />
-
-                            </androidx.constraintlayout.widget.ConstraintLayout>
-                        </soup.neumorphism.NeumorphCardView>
+                            wheel:matProg_barColor="#5588FF"
+                            wheel:matProg_progressIndeterminate="true" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/news_rv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginStart="10dp"
-                            android:layout_marginTop="10dp"
                             android:layout_marginEnd="10dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/pressed_card2"></androidx.recyclerview.widget.RecyclerView>
-                    </LinearLayout>
+                            app:layout_constraintTop_toBottomOf="@id/progress_wheel"/>                  </LinearLayout>
 
                 </androidx.core.widget.NestedScrollView>
 
             </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+
+            <FrameLayout
+                android:id="@+id/powerMenuBackground"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#80000000"
+                android:clickable="true"
+                android:focusable="true"
+                android:visibility="gone" />
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/powerMenu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:background="@drawable/news_background"
+                android:elevation="5dp"
+                android:padding="20dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="true">
+
+                <TextView
+                    android:id="@+id/power_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="기사 제목"
+                    android:textColor="@color/black"
+                    android:textSize="24dp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/power_press"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="언론사"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"
+                    android:textStyle=""
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/power_title" />
+
+                <ImageView
+                    android:id="@+id/power_image"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:layout_marginTop="13dp"
+                    android:src="@drawable/black_keyword"
+                    app:civ_border_color="@color/white"
+                    app:civ_border_width="2dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/power_press" />
+
+                <TextView
+                    android:id="@+id/power_sum"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:gravity="start"
+                    android:lineSpacingExtra="2dp"
+                    android:maxLines="13"
+                    android:text="본문 내용"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/power_image" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/close"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/btn_blue"
+                    android:text="닫기"
+                    android:textColor="@color/white"
+                    android:textSize="17dp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/readMore"
+                    app:layout_constraintTop_toBottomOf="@id/power_sum" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/readMore"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/btn_blue"
+                    android:text="본문 읽기"
+                    android:textColor="@color/white"
+                    android:textSize="17dp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@id/close"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/power_sum" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -173,97 +249,4 @@
         android:layout_gravity="start|left"
         app:menu="@menu/menu_main" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:clickable="false"
-        android:id="@+id/powerMenu"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="30dp"
-        android:background="@drawable/news_background"
-        android:elevation="5dp"
-        android:visibility="gone"
-        tools:visibility="true">
-
-        <TextView
-            android:id="@+id/power_title"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="40dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="기사 제목"
-            android:textColor="@color/black"
-            android:textSize="24dp"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/power_press"
-            app:layout_constraintTop_toBottomOf="@id/power_title"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="40dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="언론사"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            android:textStyle="" />
-
-        <ImageView
-            app:layout_constraintTop_toBottomOf="@id/power_press"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="20dp"
-            android:id="@+id/power_image"
-            android:layout_width="0dp"
-            android:layout_height="300dp"
-            android:layout_marginTop="13dp"
-            android:src="@drawable/black_keyword"
-            app:civ_border_color="@color/white"
-            app:civ_border_width="2dp" />
-
-        <TextView
-            app:layout_constraintTop_toBottomOf="@id/power_image"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/close"
-            android:layout_margin="40dp"
-            android:lineSpacingExtra="2dp"
-            android:id="@+id/power_sum"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="start"
-            android:text="본문 내용"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/close"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:background="@drawable/btn_blue"
-            android:text="닫기"
-            android:textColor="@color/white"
-            android:textSize="17dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/readMore" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/readMore"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:background="@drawable/btn_blue"
-            android:text="본문 읽기"
-            android:textColor="@color/white"
-            android:textSize="17dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/close"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
