--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -26,16 +26,28 @@
 
         <TextView
             android:id="@+id/now"
+            android:layout_marginStart="40dp"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:gravity="center"
             android:text="사회"
             android:textColor="@color/white"
             android:textSize="22dp"
             android:textStyle="bold" />
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            app:queryHint="검색어를 입력하세오"
+            app:searchIcon="@drawable/search"
+            app:closeIcon="@drawable/close"
+            />
     </RelativeLayout>
 </androidx.appcompat.widget.Toolbar>
