--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="grayButton">#f2f2f2</color>
     <color name="pressGrayButton">#e2e2e2</color>
     <color name="blue">#3F51B5</color>
+    <color name="dark_gray">#434343</color>
 </resources>
